MonetDB5/src/mal/Tests/tst900.stable
# Monet Database Server V5.0
# Copyright (c) 1993-2003, CWI. All rights reserved.
# compiled for 32biti686-pc-linux-gnu/32bit.
# config:/ufs/mk/monet_5/src/mal/Tests/tst.conf
# dbfarm:/ufs/mk/monet_5/Linux/var/MonetDB
# dbname:demo
## the multiplex code blocks. Testing syntax errors
#
#b:= new(:lng,:lng);
#x:= multiplex.+(b,b);
#d:= [+](b,c) ;;# parser bug
#a:= b [+] b;
!ERROR: d:= [+](b,c) ;;# parser bug
!           ^<identifier> or <unary operator> expected
!ERROR: a:= b [+] b;
!             ^operator expected
function Admin.main():int; #0  unknown (main:int)
    b := new(:lng,:lng); #1  unknown (b:any)<-($2:lng)($3:lng)
    x := multiplex.+(b,b); #2  unknown (x:any)<-(b:any)(b:any)
    d; #3  unknown (d:any)
    a := b; #4  unknown (a:any)<-(b:any)
end main; #5  unknown 
>